--- a/flower.html
+++ b/flower.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon" />
-    <title>Flower</title>
+    <title>Flor de YOCE</title>
   </head>
   <body class="container">
     
